--- a/index.html
+++ b/index.html
@@ -4,11 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>My Website</title>
 </head>
 <body>
-    <h1>My First Heading</h1>
+    <nav class="navbar navbar-expand-md">
+        <img src="images/my photo.jpg" alt="Sarah" class="rounded-pill" height="50px">
+        <a class="navbar-brand" href="#">Sarah</a>
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="main-navigation">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">AboutMe</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+
+        </div>
+
+    </nav>
+    <div class="container header">
+      <header class="page-header header container-fluid">
+        <div class="description">
+            <h1 class="text-light">SARAH <br>
+                WAMBUI</h1> <br>
+            <p class="text-light">The Ultimate Programmer</p>
+        </div>
+      </header>
+    </div> 
+    <footer class="page-footer bg-dark foot">
+        <div class="footer-copyright text-center text-light">@ 2023 Copyright <br>
+            My Website.com        
+            <p>I am an aspiring woman in tech.</p>
+        </div> 
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
