--- a/index.html
+++ b/index.html
@@ -31,21 +31,36 @@
         </div>
 
     </nav>
-    <div class="container header">
-      <header class="page-header header container-fluid">
+    <section>
         <div class="description">
-            <h1 class="text-light">SARAH <br>
-                WAMBUI</h1> <br>
-            <p class="text-light">The Ultimate Programmer</p>
+            <img src="images/picture.jpg" alt="Sara" class=" img-thumbnail pic" height="400px" width="300px">
+            <h2 class="text-dark text-uppercase headin">Sarah Wambui</h2>
+                <p class="par">The Ultimate Programmer and Website Developer</p>
+
         </div>
-      </header>
-    </div> 
+        <div class="button">
+            <input class="bg-danger"  type="button" id="input" value="Click Me!">
+        </div>
+        </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer class="page-footer bg-dark foot">
         <div class="footer-copyright text-center text-light">@ 2023 Copyright <br>
-            My Website.com        
+            S-Website.com        
             <p>I am an aspiring woman in tech.</p>
-        </div> 
+        </div>           
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
